#287 - Elastic search connection (#307)
* #287 - Elastic search connection

- implement first version of elastic search connection (can be switched on and off via env variables)
- requires external "work" to get started at this point of development
- add criteria-profile-data endpoint
- add referenceCriteriaSet to AttributeDefinition

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -68,6 +68,10 @@ services:
       PRIVACY_THRESHOLD_SITES: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_THRESHOLD_SITES}
       PRIVACY_THRESHOLD_SITES_RESULT: ${CODEX_FEASIBILITY_BACKEND_PRIVACY_THRESHOLD_SITES_RESULT}
       QUERYRESULT_DISABLE_LOG_FILE_ENCRYPTION: "false"
+      # ---- Elastic Search
+      ELASTIC_SEARCH_ENABLED: ${CODEX_FEASIBILITY_BACKEND_ELASTIC_SEARCH_ENABLED}
+      ELASTIC_SEARCH_HOST: ${CODEX_FEASIBILITY_BACKEND_ELASTIC_SEARCH_HOST}
+      ELASTIC_SEARCH_FILTER: ${CODEX_FEASIBILITY_BACKEND_ELASTIC_SEARCH_FILTER}
     volumes:
       - ${CODEX_FEASIBILITY_BACKEND_LOCAL_CONCEPT_TREE_PATH:-./ontology/codex-code-tree.json}:${CODEX_FEASIBILITY_BACKEND_ONTOLOGY_FILES_FOLDER:-/opt/codex-feasibility-backend/ontology}/codex-code-tree.json
       - ${CODEX_FEASIBILITY_BACKEND_LOCAL_TERM_CODE_MAPPING_PATH:-./ontology/codex-term-code-mapping.json}:${CODEX_FEASIBILITY_BACKEND_ONTOLOGY_FILES_FOLDER:-/opt/codex-feasibility-backend/ontology}/codex-term-code-mapping.json
