--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,6 +36,9 @@ management:
   endpoint:
     health:
       enabled: true
+  health:
+    elasticsearch:
+      enabled: ${ELASTIC_SEARCH_ENABLED:true}
 
 app:
   # AKTIN or DSF or MOCK or DIRECT
@@ -99,6 +102,10 @@ app:
     connectTimeout: 2000
   cql:
     baseUrl: ${CQL_SERVER_BASE_URL:http://localhost:8080/fhir}
+  elastic:
+    enabled: ${ELASTIC_SEARCH_ENABLED:true}
+    host: ${ELASTIC_SEARCH_HOST:localhost:9200}
+    filter: ${ELASTIC_SEARCH_FILTER:context,terminology,kds_module}
   privacy:
     threshold:
       sites: ${PRIVACY_THRESHOLD_SITES:3}
