--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,10 +24,11 @@ services:
       ONTOLOGY_ORDER: ${FEASIBILITY_BACKEND_ONTOLOGY_ORDER:-"Diagnose, Prozedur, Person, Laboruntersuchung, Medikamentenverabreichung, Bioprobe, Einwilligung"}
       MAX_SAVED_QUERIES_PER_USER: ${FEASIBILITY_BACKEND_MAX_SAVED_QUERIES_PER_USER:-100}
       # ---- db config
-      FEASIBILITY_DATABASE_HOST: ${FEASIBILITY_BACKEND_DATASOURCE_HOST:-feasibility-gui-backend-db}
-      FEASIBILITY_DATABASE_PORT: ${FEASIBILITY_BACKEND_DATASOURCE_PORT:-5432}
-      FEASIBILITY_DATABASE_USER: ${FEASIBILITY_BACKEND_DATASOURCE_USERNAME:-guidbuser}
-      FEASIBILITY_DATABASE_PASSWORD: ${FEASIBILITY_BACKEND_DATASOURCE_PASSWORD:-guidbpw}
+      DATABASE_HOST: ${FEASIBILITY_BACKEND_DATABASE_HOST:-feasibility-gui-backend-db}
+      DATABASE_PORT: ${FEASIBILITY_BACKEND_DATABASE_PORT:-5432}
+      DATABASE_USER: ${FEASIBILITY_BACKEND_DATABASE_USERNAME:-guidbuser}
+      DATABASE_PASSWORD: ${FEASIBILITY_BACKEND_DATABASE_PASSWORD:-guidbpw}
+      DATABASE_DBNAME: ${FEASIBILITY_BACKEND_DATABASE_DBNAME:-feasibility_ui}
       # ---- ontology
       ONTOLOGY_FILES_FOLDER_UI: ${FEASIBILITY_BACKEND_ONTOLOGY_FILES_FOLDER:-/opt/mii-feasibility-backend/ontology}
       ONTOLOGY_DB_MIGRATION_FOLDER: ${FEASIBILITY_BACKEND_ONTOLOGY_DB_MIGRATION_FOLDER:-/opt/mii-feasibility-backend/ontology/migration}
