#318 - Add endpoints for profile data
- remove profile_tree.json and terminology_systems.json from resources and move to filesystem (will be loaded with ontology files when this is available)
- add tests

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,7 +41,8 @@ management:
       enabled: ${ELASTIC_SEARCH_ENABLED:true}
 
 app:
-  # AKTIN or DSF or MOCK or DIRECT
+  dseProfileTreeFile: ${DSE_PROFILE_TREE_FILE:ontology/dse/profile_tree.json}
+  terminologySystemsFile: ${TERMINOLOGY_SYSTEMS_FILE:ontology/terminology_systems.json}
   ontologyFolder: ${ONTOLOGY_FILES_FOLDER_UI:ontology/ui_trees}
   ontologyOrder: ${ONTOLOGY_ORDER:Diagnose, Prozedur, Person, Laboruntersuchung, Medikamentenverabreichung, Bioprobe, Einwilligung}
   mappingsFile: ${MAPPINGS_FILE:ontology/mapping_cql.json}
