--- a/.github/integration-test/docker-compose.yml
+++ b/.github/integration-test/docker-compose.yml
@@ -67,6 +67,8 @@ services:
       - ./ontology/ui_profiles:/opt/codex-feasibility-backend/ontology/ui_profiles
       - ./ontology/codex-code-tree.json:/opt/codex-feasibility-backend/ontology/codex-code-tree.json
       - ./ontology/codex-term-code-mapping.json:/opt/codex-feasibility-backend/ontology/codex-term-code-mapping.json
+      - ./ontology/terminology_systems.json:/opt/codex-feasibility-backend/ontology/terminology_systems.json
+      - ./ontology/dse/profile_tree.json:/opt/codex-feasibility-backend/ontology/dse/profile_tree.json
       - ./ontology/migration/R__Load_latest_ui_profile.sql:/opt/codex-feasibility-backend/ontology/migration/R__Load_latest_ui_profile.sql
       - ./secrets:/opt/codex-feasibility-security
   feasibility-gui-backend-db:
