#289 - Initialise elastic search as part of a standard deployment
- add elastic search to docker compose (dev purposes - no https for now!)
- add an init container to setup elastic search instance

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -90,7 +90,38 @@ services:
       - type: volume
         source: feas-backend-db-data
         target: /var/lib/postgresql/data
+  feasibility-es:
+    image: docker.elastic.co/elasticsearch/elasticsearch:8.15.0
+    container_name: feasibility-es
+    ports:
+      - '9200:9200'
+      - '9300:9300'
+    environment:
+      discovery.type: single-node
+      ES_JAVA_OPTS: -Xmx512m -Xms512m
+      node.name: es01
+      cluster.name: elasticsearch
+      xpack.security.enabled: false
+    volumes:
+      - type: volume
+        source: feas-backend-es-data
+        target: /usr/share/elasticsearch/data
+  init-elasticsearch:
+    image: curlimages/curl:8.8.0
+    environment:
+      ELASTIC_HOST: http://feasibility-es:9200
+      ELASTIC_FILEPATH: https://github.com/medizininformatik-initiative/fhir-ontology-generator/raw/develop/example/fdpg-ontology/
+      ELASTIC_FILENAME: elastic.zip
+      # if set to false, existing indices are not overridden.
+      OVERRIDE_EXISTING: false
+    entrypoint: [ "sh", "-c", "/tmp/init.sh" ]
+    volumes:
+      - type: bind
+        source: ./elastic-init.sh
+        target: /tmp/init.sh
 
 volumes:
   feas-backend-db-data:
     name: "feas-backend-db-data"
+  feas-backend-es-data:
+    name: "feas-backend-es-data"
