--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,11 +53,11 @@ jobs:
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
 
-      - name: Upload Feasibility Backend Jar
+      - name: Upload Dataportal Backend Jar
         uses: actions/upload-artifact@v4
         with:
           name: backend-jar
-          path: target/feasibilityBackend.jar
+          path: target/dataportalBackend.jar
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -67,13 +67,13 @@ jobs:
         with:
           context: .
           tags: backend:latest
-          outputs: type=docker,dest=/tmp/feasibilityBackend.tar
+          outputs: type=docker,dest=/tmp/dataportalBackend.tar
 
-      - name: Upload Feasibility Backend Image
+      - name: Upload Dataportal Backend Image
         uses: actions/upload-artifact@v4
         with:
           name: backend-image
-          path: /tmp/feasibilityBackend.tar
+          path: /tmp/dataportalBackend.tar
 
   security-scan:
     runs-on: ubuntu-latest
@@ -129,7 +129,7 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v4
 
-      - name: Download Feasibility Backend Image
+      - name: Download Dataportal Backend Image
         uses: actions/download-artifact@v4
         with:
           name: backend-image
@@ -138,20 +138,20 @@ jobs:
       - name: Install jq
         uses: dcarbone/install-jq-action@v1.0.1
 
-      - name: Load Feasibility Backend Image
-        run: docker load --input /tmp/feasibilityBackend.tar
+      - name: Load Dataportal Backend Image
+        run: docker load --input /tmp/dataportalBackend.tar
 
       - name: Download ontology files from github
         run: .github/scripts/download-and-unpack-ontology.sh
 
-      - name: Run Feasibility Backend with Database, Keycloak and Blaze
+      - name: Run Dataportal Backend with Database, Keycloak and Blaze
         run: docker compose -f .github/integration-test/docker-compose.yml up -d
 
-      - name: Wait for Feasibility Backend
+      - name: Wait for Dataportal Backend
         run: .github/scripts/wait-for-url.sh  http://localhost:8091/actuator/health
 
-      - name: Check if Feasibility Backend is correctly running with the feasibility user
-        run: .github/scripts/check-if-running-as-feasibility-user.sh
+      - name: Check if Dataportal Backend is correctly running with the dataportal user
+        run: .github/scripts/check-if-running-as-dataportal-user.sh
 
       - name: Wait for Blaze
         run: .github/scripts/wait-for-url.sh  http://localhost:8082/health
