--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: "jdbc:tc:postgresql:15.1-alpine:///codex_ui_test"
+    url: "jdbc:tc:postgresql:16-alpine:///dataportal_test"
 security:
   config:
     use-keycloak: false
@@ -11,9 +11,9 @@ management:
       enabled: false
 app:
   queryResultExpiryMinutes: 1
-  keycloakAllowedRole: "FEASIBILITY_TEST_USER"
-  keycloakPowerRole: "FEASIBILITY_TEST_POWER"
-  keycloakAdminRole: "FEASIBILITY_TEST_ADMIN"
+  keycloakAllowedRole: "DATAPORTAL_TEST_USER"
+  keycloakPowerRole: "DATAPORTAL_TEST_POWER"
+  keycloakAdminRole: "DATAPORTAL_TEST_ADMIN"
   maxSavedQueriesPerUser: 2
   broker:
     aktin:
