--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
   </parent>
 
   <groupId>de.medizininformatik-initiative</groupId>
-  <artifactId>FeasibilityGuiBackend</artifactId>
+  <artifactId>DataportalBackend</artifactId>
   <version>6.0.0-SNAPSHOT</version>
 
-  <name>FeasibilityGuiBackend</name>
-  <description>Backend of the Feasibility GUI</description>
+  <name>Dataportal Backend</name>
+  <description>Backend of the Dataportal</description>
 
   <scm>
     <connection>scm:git:${project.scm.url}</connection>
@@ -358,7 +358,7 @@
 
 
   <build>
-    <finalName>feasibilityBackend</finalName>
+    <finalName>dataportalBackend</finalName>
 
     <plugins>
       <plugin>
