--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
   </parent>
 
   <groupId>de.medizininformatik-initiative</groupId>
-  <artifactId>FeasibilityGuiBackend</artifactId>
+  <artifactId>DataportalBackend</artifactId>
   <version>6.0.0-SNAPSHOT</version>
 
-  <name>FeasibilityGuiBackend</name>
-  <description>Backend of the Feasibility GUI</description>
+  <name>Dataportal Backend</name>
+  <description>Backend of the Dataportal</description>
 
   <scm>
     <connection>scm:git:${project.scm.url}</connection>
@@ -27,7 +27,7 @@
     <java.version>17</java.version>
     <mockwebserver.version>4.10.0</mockwebserver.version>
     <okhttp3.version>4.10.0</okhttp3.version>
-    <ontology-tag>v3.0.0-test.1</ontology-tag>
+    <ontology-tag>v3.0.0-test.2</ontology-tag>
   </properties>
 
   <dependencies>
@@ -358,7 +358,7 @@
 
 
   <build>
-    <finalName>feasibilityBackend</finalName>
+    <finalName>dataportalBackend</finalName>
 
     <plugins>
       <plugin>
