--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     <java.version>17</java.version>
     <mockwebserver.version>4.10.0</mockwebserver.version>
     <okhttp3.version>4.10.0</okhttp3.version>
-    <ontology-tag>v3.0.0-test.2</ontology-tag>
+    <ontology-tag>v3.0.0-test.3</ontology-tag>
   </properties>
 
   <dependencies>
@@ -237,7 +237,7 @@
     <dependency>
       <groupId>de.medizininformatik-initiative</groupId>
       <artifactId>sq2cql</artifactId>
-      <version>0.3.0</version>
+      <version>v0.5.0-alpha.1</version>
     </dependency>
 
     <dependency>
