--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,8 +28,10 @@ spring:
 
 springdoc:
   swagger-ui:
-    url: /v4/api-docs/swagger.yaml
+    disable-swagger-default-url: true
     tryItOutEnabled: false
+    path: /swagger-ui
+    url: /v3/api-docs/swagger.yaml
 management:
   endpoints:
     enabled-by-default: false
