--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,7 +99,7 @@ services:
 
   dataportal-postgres:
     container_name: dataportal-postgres
-    image: 'postgres:16-alpine'
+    image: 'postgres:latest'
     ports:
       - ${DATAPORTAL_BACKEND_DB_PORT:-127.0.0.1:5432}:5432
     environment:
@@ -133,22 +133,19 @@ services:
         source: dataportal-elastic-data
         target: /usr/share/elasticsearch/data
   init-elasticsearch:
-    image: curlimages/curl:8.8.0
+    image: ghcr.io/medizininformatik-initiative/dataportal-es-init:latest
     depends_on:
       dataportal-elastic:
         condition: service_healthy
     environment:
-      ELASTIC_HOST: http://dataportal-elastic:9200
-      ELASTIC_GIT_TAG: v3.0.0-alpha
-      ELASTIC_FILEPATH: https://github.com/medizininformatik-initiative/fhir-ontology-generator/raw/TAGPLACEHOLDER/example/fdpg-ontology/
-      ELASTIC_FILENAME: elastic.zip
-      # if set to false, existing indices are not overridden.
-      OVERRIDE_EXISTING: true
-    entrypoint: [ "sh", "-c", "/tmp/init.sh" ]
-    volumes:
-      - type: bind
-        source: ./elastic-init.sh
-        target: /tmp/init.sh
+      ES_HOST: http://dataportal-elastic
+      ES_PORT: 9200
+      ONTO_GIT_TAG: v3.0.0-develop.2
+      ONTO_REPO: https://github.com/medizininformatik-initiative/fhir-ontology-generator/raw/
+      ONTO_RELATIVE_PATH: /example/fdpg-ontology/
+      DOWNLOAD_FILENAME: elastic.zip
+      EXIT_ON_EXISTING_INDICES: false
+      FORCE_INDEX_CREATION: true
 
 volumes:
   dataportal-postgres-data:
