--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
-          java-version: 23
+          java-version: 21
 
       - name: Cache Local Maven Repo
         uses: actions/cache@v4
@@ -41,7 +41,7 @@ jobs:
           queries: security-and-quality
 
       - name: Run Tests
-        run: mvn -X -e -Pdownload-ontology -B verify
+        run: mvn -Pdownload-ontology -B verify
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
@@ -80,11 +80,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up JDK 23
+    - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
         distribution: 'zulu'
-        java-version: 23
+        java-version: 21
 
     - name: Cache Local Maven Repo
       uses: actions/cache@v4
@@ -126,7 +126,7 @@ jobs:
 
   integration-test:
     needs: tests
-    runs-on: ubuntu-24.10
+    runs-on: ubuntu-latest
     env:
       ONTOLOGY_GIT_TAG: v3.0.0-test.11
       ELASTIC_HOST: http://localhost:9200
@@ -203,11 +203,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
-    - name: Set up JDK 23
+    - name: Set up JDK 21
       uses: actions/setup-java@v4
       with:
         distribution: 'temurin'
-        java-version: 23
+        java-version: 21
 
     - name: Cache Local Maven Repo
       uses: actions/cache@v4
