--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -99,7 +99,7 @@ services:
 
   dataportal-postgres:
     container_name: dataportal-postgres
-    image: 'postgres:latest'
+    image: 'postgres:16-alpine'
     ports:
       - ${DATAPORTAL_BACKEND_DB_PORT:-127.0.0.1:5432}:5432
     environment:
@@ -140,7 +140,7 @@ services:
     environment:
       ES_HOST: http://dataportal-elastic
       ES_PORT: 9200
-      ONTO_GIT_TAG: v3.0.0-develop.6
+      ONTO_GIT_TAG: v3.0.0-develop.8
       ONTO_REPO: https://github.com/medizininformatik-initiative/fhir-ontology-generator/raw/
       ONTO_RELATIVE_PATH: /example/fdpg-ontology/
       DOWNLOAD_FILENAME: elastic.zip
