--- a/pom.xml
+++ b/pom.xml
@@ -220,7 +220,7 @@
     <dependency>
       <groupId>de.medizininformatik-initiative</groupId>
       <artifactId>sq2cql</artifactId>
-      <version>v0.5.0-alpha.1</version>
+      <version>0.5.0</version>
     </dependency>
 
     <dependency>
