--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 
   <groupId>de.medizininformatik-initiative</groupId>
   <artifactId>DataportalBackend</artifactId>
-  <version>6.1.0-SNAPSHOT</version>
+  <version>6.0.1</version>
 
   <name>Dataportal Backend</name>
   <description>Backend of the Dataportal</description>
