#415 - Make fhir client timeouts configurable
- introduce env variables for connect, socket and connectionRequest timeouts in the fhir client

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -57,6 +57,9 @@ services:
       BROKER_CLIENT_DIRECT_AUTH_OAUTH_CLIENT_SECRET: ${DATAPORTAL_BACKEND_BROKER_CLIENT_DIRECT_AUTH_OAUTH_CLIENT_SECRET:-insecure}
       FLARE_WEBSERVICE_BASE_URL: ${DATAPORTAL_BACKEND_FLARE_WEBSERVICE_BASE_URL:-http://flare:8080}
       CQL_SERVER_BASE_URL: ${DATAPORTAL_BACKEND_CQL_SERVER_BASE_URL:-http://fhir-server:8080/fhir}
+      BROKER_CLIENT_DIRECT_CQL_TIMEOUT_CONNECT_MS: ${DATAPORTAL_BACKEND_BROKER_CLIENT_DIRECT_CQL_TIMEOUT_CONNECT_MS}
+      BROKER_CLIENT_DIRECT_CQL_TIMEOUT_SOCKET_MS: ${DATAPORTAL_BACKEND_BROKER_CLIENT_DIRECT_CQL_TIMEOUT_SOCKET_MS}
+      BROKER_CLIENT_DIRECT_CQL_TIMEOUT_CONNECTIONREQUEST_MS: ${DATAPORTAL_BACKEND_BROKER_CLIENT_DIRECT_CQL_TIMEOUT_CONNECTIONREQUEST_MS}
       # ---- Aktin broker
       BROKER_CLIENT_AKTIN_ENABLED: ${DATAPORTAL_BACKEND_AKTIN_ENABLED:-false}
       AKTIN_BROKER_BASE_URL: ${DATAPORTAL_BACKEND_AKTIN_BROKER_BASE_URL:-http://aktin-broker:8080/broker/}
