#450 - Update sq2cql to new version - time restriction bugfix
- update sq2cql dependency to 0.8.0-alpha.1

--- a/pom.xml
+++ b/pom.xml
@@ -206,7 +206,7 @@
     <dependency>
       <groupId>de.medizininformatik-initiative</groupId>
       <artifactId>sq2cql</artifactId>
-      <version>0.7.0</version>
+      <version>0.8.0-alpha.1</version>
     </dependency>
 
     <dependency>
