#419 - Creating of query in the dataportal for a different user via the proposal portal
- add expiry date to dataquery in database
- add endpoint (usable by admin only) to create queries for users (includes mandatory ttl)
- add parameters to include expiring queries when listing queries
- add cronjob that deletes expired queries
- move conversion between dataquery (api) and dataquery (persistence) to the respective classes/records as of() methods
- add WebSecurityConfigIT
- add default values for most @Value annotated params

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -67,6 +67,7 @@ app:
   keycloakAdminRole: ${KEYCLOAK_ADMIN_ROLE:DataportalAdmin}
   queryResultExpiry: ${QUERYRESULT_EXPIRY:PT1M}
   maxSavedQueriesPerUser: ${MAX_SAVED_QUERIES_PER_USER:10}
+  purgeExpiredQueries: ${PURGE_EXPIRED_QUERIES:0 0 * * * *}
   export:
     csv:
       delimiter: ${EXPORT_CSV_DELIMITER:;}
